// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signals ChartHeader Component renders correctly 1`] = `
<Fragment>
  <div
    className="ChartHeader"
    style={
      Object {
        "padding": "",
      }
    }
  >
    <h6
      className="Title"
    >
      Foo
    </h6>
  </div>
  <hr
    className="Line"
  />
</Fragment>
`;

exports[`Signals ChartHeader Component renders padding correctly 1`] = `
<Fragment>
  <div
    className="ChartHeader"
    style={
      Object {
        "padding": "0 0 1rem 0",
      }
    }
  >
    <h6
      className="Title"
    >
      Foo
    </h6>
  </div>
  <hr
    className="Line"
  />
</Fragment>
`;

exports[`Signals ChartHeader Component renders primaryArea correctly 1`] = `
<Fragment>
  <div
    className="ChartHeader"
    style={
      Object {
        "padding": "",
      }
    }
  >
    <h6
      className="Title"
    >
      Foo
    </h6>
    <div>
      <div>
        react
      </div>
    </div>
  </div>
  <hr
    className="Line"
  />
</Fragment>
`;

exports[`Signals ChartHeader Component renders tooltip content correctly 1`] = `
<Fragment>
  <div
    className="ChartHeader"
    style={
      Object {
        "padding": "",
      }
    }
  >
    <h6
      className="Title"
    >
      Foo
    </h6>
    <div
      className="Tooltip"
    >
      <Tooltip
        bottom={true}
        content="tooltip content"
        dark={true}
        forcePosition={false}
        horizontalOffset="-14px"
        preferredDirection={
          Object {
            "bottom": true,
            "left": false,
            "right": true,
            "top": false,
          }
        }
        right={true}
      >
        <InfoOutline
          size={24}
        />
      </Tooltip>
    </div>
  </div>
  <hr
    className="Line"
  />
</Fragment>
`;
